--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,15 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.eslintcache
+.eslintcache*
+package-lock.json
