--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shopping-cart",
+  "proxy": "http://localhost:27015",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,9 +17,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "react-redux": "^7.2.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "shortid": "^2.2.16",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "web-vitals": "^0.2.4"
